--- a/index.html
+++ b/index.html
@@ -19,21 +19,57 @@
     <!-- tailwind cdn  -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
     <style>
       .font-manrope {
         font-family: "Manrope", sans-serif;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <!-- main container  -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-20">
+      <!-- header section  -->
+      <header class="flex pt-10 mb-20">
+        <!-- text-content  -->
+        <div>
+          <h1 class="text-5xl md:text-7xl text-[#rgb(28, 28, 28)]">
+            It's good <br />
+            tea time at The <br />
+            Tea House
+          </h1>
+          <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+          <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold text-xl">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+        </div>
+        <!-- img content  -->
+        <div>
+          <!-- img  -->
+           <div class="relative">
+            <img class="w-full" src="./images/banner.png" alt="">
+            <!-- card  -->
+             <div class="flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg absolute top-28 md:top-52 md:left-1.5 lg:top-60 lg:-left-2.6">
+              <!-- icon -->
+               <div>
+                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+               </div>
+               <!-- text  -->
+                <div class="ml-2">
+                  <h2 class="lg:text-2xl font-bold">5.00</h2>
+                  <p class="text-gray-500">Trust Pilot Ratings</p>
+                </div>
+             </div>
+           </div>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
