--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </header>
       <!-- featured products section  -->
-        <section class="py-4 lg:py-24">
+        <section class="py-12 lg:py-24">
           <!-- title  -->
         <div class="text-center mb-8">
           <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
@@ -113,6 +113,52 @@
              </div>
           </div>
         </section>
+        <!-- grid tea section  -->
+         <section class="my-24">
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+            <!-- image section  -->
+            <div class="grid grid-cols-2 grid-rwos-3 gap-4 lg:w-5/6">
+              <div class="h-32 bg-gradient-to-r from-red-100  to-red-50 rounded-xl"></div>
+              <div class="bg-orange-50 rounded-xl row-span-2">
+                <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
+              </div>
+              <div class="bg-stone-100 rounded-xl row-span-2">
+                <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
+              </div>
+              <div class="h-32 bg-gradient-to-r from-stone-200  to-stone-100 rounded-xl"></div>
+            </div>
+            <!-- content section  -->
+            <div>
+              <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+              <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+              <br>
+              <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+              <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+              <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+              <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+          </div>
+         </section>
+         <!-- reviews section  --> 
+          <section class="mb-24">
+            <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+              <!-- text-section  -->
+               <div class="w-5/6">
+                <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
+                <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
+               </div>
+               <!-- reviews card section  -->
+                <div class="relative py-24">
+                  <!-- top card  -->
+                   <div class="relative h-56 w-full md:3/4 bg-white text-black rounded-lg">
+                    <div>
+                      <img src="./images/client.png" alt="">
+                    </div>
+                   </div>
+                </div>
+            </div>
+          </section>
     </main>
   </body>
 </html>
