--- a/index.html
+++ b/index.html
@@ -47,118 +47,220 @@
             tea time at The <br />
             Tea House
           </h1>
-          <p class="text-gray-500 w-3/4 my-4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-          <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold text-xl">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+          <p class="text-gray-500 w-3/4 my-4">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <button
+            class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold text-xl"
+          >
+            Explore More
+            <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i>
+          </button>
         </div>
         <!-- img content  -->
         <div>
           <!-- img  -->
-           <div class="relative">
-            <img class="w-full" src="./images/banner.png" alt="">
+          <div class="relative">
+            <img class="w-full" src="./images/banner.png" alt="" />
             <!-- card  -->
-             <div class="flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg absolute top-28 md:top-52 md:left-1.5 lg:top-60 lg:-left-2.6">
+            <div
+              class="flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg absolute top-28 md:top-52 md:left-1.5 lg:top-60 lg:-left-2.6"
+            >
               <!-- icon -->
-               <div>
+              <div>
                 <i class="fa-solid fa-star text-2xl text-amber-500"></i>
-               </div>
-               <!-- text  -->
-                <div class="ml-2">
-                  <h2 class="lg:text-2xl font-bold">5.00</h2>
-                  <p class="text-gray-500">Trust Pilot Ratings</p>
-                </div>
-             </div>
-           </div>
+              </div>
+              <!-- text  -->
+              <div class="ml-2">
+                <h2 class="lg:text-2xl font-bold">5.00</h2>
+                <p class="text-gray-500">Trust Pilot Ratings</p>
+              </div>
+            </div>
+          </div>
         </div>
       </header>
       <!-- featured products section  -->
-        <section class="py-12 lg:py-24">
-          <!-- title  -->
+      <section class="py-12 lg:py-24">
+        <!-- title  -->
         <div class="text-center mb-8">
-          <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
-          <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-         </div>
-         <!-- grid cards  -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
-            <!-- product cards  -->
-             <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
-              <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
-              <div class="p-4">
-                <h2 class="font-bold text-xl">Milk Tea</h2>
-                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
-              </div>
-             </div>
-            <!-- product cards  -->
-             <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
-              <img class="mx-auto pt-4" src="./images/tea-2.png" alt="">
-              <div class="p-4">
-                <h2 class="font-bold text-xl">Black Tea</h2>
-                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
-              </div>
-             </div>
-            <!-- product cards  -->
-             <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
-              <img class="mx-auto pt-4" src="./images/tea-3.png" alt="">
-              <div class="p-4">
-                <h2 class="font-bold text-xl">Lemon Tea</h2>
-                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
-              </div>
-             </div>
-            <!-- product cards  -->
-             <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
-              <img class="mx-auto pt-4" src="./images/tea-4.png" alt="">
-              <div class="p-4">
-                <h2 class="font-bold text-xl">Green Tea</h2>
-                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
-              </div>
-             </div>
-          </div>
-        </section>
-        <!-- grid tea section  -->
-         <section class="my-24">
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
-            <!-- image section  -->
-            <div class="grid grid-cols-2 grid-rwos-3 gap-4 lg:w-5/6">
-              <div class="h-32 bg-gradient-to-r from-red-100  to-red-50 rounded-xl"></div>
-              <div class="bg-orange-50 rounded-xl row-span-2">
-                <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
-              </div>
-              <div class="bg-stone-100 rounded-xl row-span-2">
-                <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
-              </div>
-              <div class="h-32 bg-gradient-to-r from-stone-200  to-stone-100 rounded-xl"></div>
-            </div>
-            <!-- content section  -->
-            <div>
-              <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
-              <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-              <br>
-              <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
-              <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-              <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
-              <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">
+            Our Featured Products
+          </h1>
+          <p class="text-gray-600 max-w-xl mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- grid cards  -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center"
+        >
+          <!-- product cards  -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-1.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Milk Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
             </div>
           </div>
-         </section>
-         <!-- reviews section  --> 
-          <section class="mb-24">
-            <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
-              <!-- text-section  -->
-               <div class="w-5/6">
-                <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
-                <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
-               </div>
-               <!-- reviews card section  -->
-                <div class="relative py-24">
-                  <!-- top card  -->
-                   <div class="relative h-56 w-full md:3/4 bg-white text-black rounded-lg">
-                    <div>
-                      <img src="./images/client.png" alt="">
-                    </div>
-                   </div>
+          <!-- product cards  -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-2.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Black Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- product cards  -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-3.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Lemon Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- product cards  -->
+          <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+            <img class="mx-auto pt-4" src="./images/tea-4.png" alt="" />
+            <div class="p-4">
+              <h2 class="font-bold text-xl">Green Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- grid tea section  -->
+      <section class="my-24">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+          <!-- image section  -->
+          <div class="grid grid-cols-2 grid-rwos-3 gap-4 lg:w-5/6">
+            <div
+              class="h-32 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"
+            ></div>
+            <div class="bg-orange-50 rounded-xl row-span-2">
+              <img class="mx-auto my-5" src="./images/fresh-1.png" alt="" />
+            </div>
+            <div class="bg-stone-100 rounded-xl row-span-2">
+              <img class="mx-auto my-5" src="./images/fresh-2.png" alt="" />
+            </div>
+            <div
+              class="h-32 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+            ></div>
+          </div>
+          <!-- content section  -->
+          <div>
+            <h1 class="text-5xl font-bold mb-5">
+              Great Tea, Freshly Presented
+            </h1>
+            <p class="text-gray-500">
+              The meaning of gong cha is chanese is to provide the best tea to
+              emperor from all possessions . It represents the highest quality
+              and self expectation. Establishing in 2006, Gong cha had been
+              deeply appreciated by its custoers because of good words of mouth
+              and unique customized service orginated from Taiwan.
+            </p>
+            <br />
+            <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+            <p class="text-gray-500">
+              A Unique and different style from other teapots gives a luxurious
+              and minimalist impression
+            </p>
+            <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+            <p class="text-gray-500">
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- reviews section  -->
+      <section class="mb-24">
+        <div
+          class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16"
+        >
+          <!-- text-section  -->
+          <div class="flex justify-center items-center">
+            <div class="w-5/6">
+              <h1 class="text-5xl font-bold mb-5 mt-10">
+                Meet Our Super Clients
+              </h1>
+              <p class="mb-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+              <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">
+                Show All
+              </button>
+            </div>
+          </div>
+          <!-- reviews card section  -->
+          <div class="relative py-24">
+            <!-- middle card  -->
+            <div class="absolute z-10 top-44 md:top-52">
+              <div
+                class="h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5"
+              >
+                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                  <img class="p-1" src="./images/client.png" alt="" />
                 </div>
+                <div>
+                  <p class="text-gray-500 mb-5">
+                    We are providing the best and suitable home insurance
+                    services for the people who are interested to treatment
+                  </p>
+                  <h1 class="font-bold">Ilham Yuda</h1>
+                  <small class="font-bold text-gray-500">Ilham Yuda</small>
+                </div>
+              </div>
             </div>
-          </section>
+            <!-- top card  -->
+            <div
+              class="relative left-8 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold">Ilham Yuda</h1>
+                <small class="font-bold text-gray-500">Ilham Yuda</small>
+              </div>
+            </div>
+            <!-- bottom card  -->
+            <div
+              class="relative left-8 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold">Ilham Yuda</h1>
+                <small class="font-bold text-gray-500">Ilham Yuda</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
