--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
             colors: {
               clifford: "#da373d",
             },
+            fontFamily: {
+              manrope:["Manrope", "sans-serif"]
+            }
           },
         },
       };
     </script>
-    <style>
+    <!-- <style>
       .font-manrope {
         font-family: "Manrope", sans-serif;
       }
-    </style>
+    </style> -->
   </head>
-  <body>
+  <body class="font-manrope">
     <!-- main container  -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-20">
       <!-- header section  -->
@@ -304,6 +307,24 @@
               <li><a class="hover:text-orange-600" href="#">Contact Us</a></li>
             </ul>
            </div>
+           <!-- forth column  -->
+            <div>
+              <h3 class="font-semibold text-lg mb-3">Subscribe to our newsletter</h3>
+              <div class="flex flex-col space-y-2">
+                <div>
+                  <input class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6" type="text" placeholder="Email Address">
+                  <i class="fa-solid fa-chevron-right h-7 w-7 bg-orange-600 inline-flex rounded-full text-white text-center justify-center items-center"></i>
+                <div class="flex w-2/5  mb-2 mt-8 justify-between">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-square-instagram"></i>
+                  <i class="fa-brands fa-square-twitter"></i>
+                </div>
+                </div>
+              </div>
+            </div>
+         </div>
+         <div class="text-center pt-4 mt-4">
+          <p text-sm text-gray-600>© 2027 UIDesign.to - All rights reserved.</p>
          </div>
       </div>
      </section>
