--- a/index.html
+++ b/index.html
@@ -265,6 +265,46 @@
         </div>
       </section>
       <!-- news section  -->
+       <section class="py-12 lg:py-24">
+        <!-- title  -->
+        <div class="text-center  mb-8">
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">News & Events</h1>
+          <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p> 
+        </div>
+        <!-- grid container  -->
+         <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 text-start">
+          <!-- news card  -->
+           <div class="border-2 p-5 rounded-lg">
+            <img class="w-full mb-4" src="./images/news-1.png" alt="">
+            <div>
+              <small class="text-gray-500 mb-2 font-semibold block">Feb 05, 2027</small>
+              <h4 class="text-xl font-bold text-[#1C1C1C] mb-2">Collecting 8 points for discount</h4>
+              <p class="text-gray-500 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="font-semibold text-xl">Learn More</button>
+            </div>
+           </div>
+          <!-- news card  -->
+           <div class="border-2 p-5 rounded-lg">
+            <img class="w-full mb-4" src="./images/news-2.png" alt="">
+            <div>
+              <small class="text-gray-500 mb-2 font-semibold block">Feb 05, 2027</small>
+              <h4 class="text-xl font-bold text-[#1C1C1C] mb-2">Collecting 8 points for discount</h4>
+              <p class="text-gray-500 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="font-semibold text-xl">Learn More</button>
+            </div>
+           </div>
+          <!-- news card  -->
+           <div class="border-2 p-5 rounded-lg">
+            <img class="w-full mb-4" src="./images/news-3.png" alt="">
+            <div>
+              <small class="text-gray-500 mb-2 font-semibold block">Feb 05, 2027</small>
+              <h4 class="text-xl font-bold text-[#1C1C1C] mb-2">Collecting 8 points for discount</h4>
+              <p class="text-gray-500 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+              <button class="font-semibold text-xl">Learn More</button>
+            </div>
+           </div>
+         </div>
+       </section>
     </main>
     <!-- footer section  -->
      <section class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
